@@ -105,6 +105,11 @@ public class LogFacade {
     public static final String CHECK_THREAD_LOCALS_FOR_LEAKS_FAIL = PREFIX + "00011";
 
     @LogMessageInfo(
+            message = "Finding ThreadLocal references for web application [{0}] is not supported by the JVM. Use '--add-opens java.base/java.lang=ALL-UNNAMED' java argument to enable it",
+            level = "FINE")
+    public static final String CHECK_THREAD_LOCALS_FOR_LEAKS_NOT_SUPPORTED = PREFIX + "00012";
+
+    @LogMessageInfo(
             message = "The web application [{0}] created a ThreadLocal with key of [{1}]"
                 + " but failed to remove it when the web application was stopped."
                 + " Threads are going to be renewed over time to try and avoid a probable memory leak.",
